# Elbow

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  Makefile.gnu  README
armpit_tests/: interrupt.scm  interrupt2.scm  nesteddefs.scm
gtk/: ElbowMain.glade  Makefile  gtkhelloworld.c  main.c
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.gnu  bowshell.c  bowshell.h  elbow_config.h.in  getopt.c  getopt.h  main.c  main_new.c  options.c  options.h  sendfiles.c  sendfiles.h  serial.c  serial.h
